--- a/PictureViewer/PictureViewer.csproj
+++ b/PictureViewer/PictureViewer.csproj
@@ -6,6 +6,7 @@
 	<UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="MaterialDesignThemes" Version="4.8.0" />
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
   </ItemGroup>
 </Project>
